<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/allCandidates"
        android:title="@string/all_candidates_title"
        app:showAsAction="never"
        android:orderInCategory="100" />

    <item android:id="@+id/topCandidates"
        android:title="@string/top_candidates_title"
        app:showAsAction="never"
        android:orderInCategory="101"
        android:enabled="false"/>

    <item android:id="@+id/nominee"
        android:title="@string/run_office_title"
        app:showAsAction="never"
        android:orderInCategory="102" />

    <item android:id="@+id/signOut"
        android:title="@string/sign_out_title"
        app:showAsAction="never"
        android:orderInCategory="103" />

</menu>