<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/potentialCandidate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/dlgDirections" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/chapterOffices"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/chapterOffices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:contentDescription="@string/chapterOfficesDesc" />

    </LinearLayout>


</android.widget.LinearLayout>