<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/candidatePhoto"
            android:layout_width="81dp"
            android:layout_height="127dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/photoFldDesc" />

        <TextView
            android:id="@+id/memberName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/candidatePhoto"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center" />
        
        <TextView
            android:id="@+id/chapterPosition"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="18dp"
            android:maxLines="2"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/candidatePhoto"
            android:layout_below="@+id/memberName" />

        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/candidatePhoto"/>

        <TextView
            android:id="@+id/scrolledProfile"
            android:layout_width="320dp"
            android:layout_height="170dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="25dp"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/profileLabel" />

        <TextView
            android:id="@+id/ratingLabel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:text="@string/rating_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/scrolledProfile"/>

        <RatingBar
            android:id="@+id/candidateRating"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:stepSize="0.5"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ratingLabel"/>
        

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bottom_sheet_color"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ListView
            android:id="@+id/officeCandidates"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
